fix(style): add padding to avoid an overflow from frame

--- a/src/components/AboutCarrier/AboutCarrier.scss
+++ b/src/components/AboutCarrier/AboutCarrier.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: vars.$padding 0;
 }
 
 .AboutCarrier__container {
